--- a/Homepage/CV/data/CV_KaifeiChen.tex
+++ b/Homepage/CV/data/CV_KaifeiChen.tex
@@ -48,12 +48,11 @@
       \end{minipage}
       \begin{minipage}{0.45\linewidth}
         \begin{tabular}{ll}
-          \textit{Voice}: & +1 (510) 520-5653 \\
+          \textit{Voice}: & +1 (510)883-3298 \\
           \textit{E-mail}: & \href{mailto:kaifei@berkeley.edu}{\tt kaifei@berkeley.edu} \\
           \textit{WWW}: & \url{http://www.cs.berkeley.edu/~kaifei/}
         \end{tabular}
       \end{minipage}
-
 
     \section{\sc Current Status}
 
@@ -61,34 +60,39 @@
       Computer Science  \\
       University of California, Berkeley
 
-    % \section{\sc Research Interests}
+    \section{\sc Research Interests}
 
-    %   Wireless and Mobile Systems, Ubiquitous Computing
-
+      Wireless and Mobile Systems, Sensor Networks, Ubiquitous Computing
 
     \section{\sc Education}
+%
+      %{\bf Microsoft Research Asia}, Beijing, China \\
+      %\vspace*{-.1in}
+      %\begin{list1}
+      %  \item[] B.S. Computer Science \hfill Sept. 2007 - Present \\
+      %      (first three years) \\
+      %      GPA: 3.68 \\
+      %      GPA Rank: 5/121
+      %\end{list1}
 
-      {\bf University of California at Berkeley}, Berkeley, CA \\
+      {\bf University of California, Berkeley}, Berkeley, CA \\
       \vspace*{-.1in}
       \begin{list1}
-        \item[] Ph.D. Computer Science \hfill Aug. 2012 - Present \\ 
-        Advisor: Prof. Randy H. Katz and Prof. David E. Culler
+        \item[] Ph.D. Computer Science \hfill Aug. 2012 - Present \\
       \end{list1}
 
-      \vspace*{-2.5mm}
+      \vspace*{-5.5mm}
       {\bf University of Science and Technology of China}, Hefei, Anhui China \\
       \vspace*{-.1in}
       \begin{list1}
         \item[] B.Eng. Computer Science and Technology \hfill Sept. 2007 - Jul. 2012 \\
+     %       (first three years) \\
+     %       GPA: 3.68 \\
+     %       GPA Rank: 5/121
       \end{list1}
-
 
     \section{\sc Honors and Awards}
 
-      Excellent Undergraduate Thesis Award at University of Science and Technology of China \hfill 2012\\
-      {\it in top 5\% among all undergraduate students}
-
-      \vspace*{-2.5mm}
       Excellent Intern Award at Microsoft Research Asia \hfill 2011\\
       {\it in top 30\% among all Microsoft Research Asia interns}
 
@@ -116,56 +120,64 @@
       Outstanding Student Scholarship Grade 3 at University of Science and Technology of China \hfill 2008\\
       {\it in top 20\% among about 510 students}
 
-
     \section{\sc Publications}
-      Yun Cheng, \underline{Kaifei Chen}, Ben Zhang, Chieh-Jan Mike Liang, Xiaofan Jiang, and Feng Zhao. ``{\it Accurate Real-Time Occupant Energy-Footprinting in Commercial Buildings}". In Proceedings of the 4th ACM Workshop on Embedded Sensing Systems for Energy-Efficiency in Buildings, Nov. 2012. Toronto, Canada.
-
-      \vspace*{-2.0mm}
       Ben Zhang, \underline{Kaifei Chen}, Yun Cheng, Chieh-Jan Mike Liang, Xiaofan Jiang, and Feng Zhao. ``{\it Location-log: Bringing Online Shopping Benefits to the Physical World with Magnetic-based Proximity Detection}". In Proceedings of the 2nd International Workshop on Mobile Sensing, Apr. 2012. Beijing, China.
 
       \vspace*{-2.0mm}
-      Chieh-Jan Mike Liang, \underline{Kaifei Chen}, Jie Liu, Nissanka Bodhi Priyanthaz, and Feng Zhao. ``{\it Poster Abstract: Shipping Data from Heterogeneous Protocols on Packet Train}". In Proceedings of the 11th ACM/IEEE Conference on Information Processing in Sensor Networks, pages 127-128, Apr. 2012. Beijing, China.
+      Chieh-Jan Mike Liang, \underline{Kaifei Chen}, Jie Liu, Nissanka Bodhi Priyanthaz, and Feng Zhao. ``{\it Poster Abstract: Shipping Data from Heterogeneous Protocols on Packet Train}". In Proceedings of the 11th ACM/IEEE Conference on Information Processing in Sensor Networks (IPSN 2012), pages 127-128, Apr. 2012. Beijing, China.
 
       \vspace*{-2.0mm}
-      Xiaofan Jiang, Chieh-Jan Mike Liang, \underline{Kaifei Chen}, Ben Zhang, Jeff Hsu, Bin Cao, Jie Liu, and Feng Zhao. ``{\it Design and Evaluation of a Wireless Magnetic-based Proximity Detection Platform for Indoor Applications}". In Proceedings of the 11th ACM/IEEE Conference on Information Processing in Sensor Networks, pages 221-232, Apr. 2012. Beijing, China. (Acceptance Rate: 15.0\%)
+      Xiaofan Jiang, Chieh-Jan Mike Liang, \underline{Kaifei Chen}, Ben Zhang, Jeff Hsu, Bin Cao, Jie Liu, and Feng Zhao. ``{\it Design and Evaluation of a Wireless Magnetic-based Proximity Detection Platform for Indoor Applications}". In Proceedings of the 11th ACM/IEEE Conference on Information Processing in Sensor Networks (IPSN 2012), pages 221-232, Apr. 2012. Beijing, China. (Acceptance Rate: 15.0\%)
 
       \vspace*{-2.0mm}
-      Xiaofan Jiang, Chieh-Jan Mike Liang, Feng Zhao, \underline{Kaifei Chen}, Jeff Hsu, Ben Zhang, and Jie Liu. ``{\it Demo: Creating Interactive Virtual Zones in Physical Space with Magnetic-Induction}". In Proceedings of the 9th ACM Conference on Embedded Networked Sensor Systems, pages 431-432, Nov. 2011. Seattle, WA. {\bf (Best Demo Award)}
+      Xiaofan Jiang, Chieh-Jan Mike Liang, Feng Zhao, \underline{Kaifei Chen}, Jeff Hsu, Ben Zhang, and Jie Liu. ``{\it Demo: Creating Interactive Virtual Zones in Physical Space with Magnetic-Induction}". In Proceedings of the 9th ACM Conference on Embedded Networked Sensor Systems (SenSys 2011), pages 431-432, Nov. 2011. Seattle, WA. {\bf (Best Demo Award)}
 
       \vspace*{-2.0mm}
-      Zheng Sun, Aveek Purohit, \underline{Kaifei Chen}, Shijia Pan, Trevor Perring, and Pei Zhang. ``{\it PANDAA: Physical Arrangement Detection of Networked Devices through Ambient-Sound Awareness}". In Proceedings of the 13th ACM International Conference on Ubiquitous Computing, pages 425-434, Sept. 2011. Beijing, China. (Acceptance Rate: 16.6\%) {\bf (Affiliated demo wins the Best Demo Award)}
+      Zheng Sun, Aveek Purohit, \underline{Kaifei Chen}, Shijia Pan, Trevor Perring, and Pei Zhang. ``{\it PANDAA: Physical Arrangement Detection of Networked Devices through Ambient-Sound Awareness}". In Proceedings of the 13th ACM International Conference on Ubiquitous Computing (UbiComp 2011), pages 425-434, Sept. 2011. Beijing, China. (Acceptance Rate: 16.6\%) {\bf (Affiliated demo wins the Best Demo Award)}
 
+      %\vspace*{-2.0mm}
+      %\underline{Kaifei Chen}, Dongqu Chen, Daiwei Zhang and Yufei Liu. ``{it Analysis on Wide Use of Electric Vehicles}". The Mathematical Contest in Modeling/ The Interdisciplinary Contest in Modeling (MCM/ ICM 2011), Feb. 2011.
+%
+      %\vspace*{-2.0mm}
+      %\underline{Kaifei Chen}, Yufei Liu, and Daiwei Zhang. ``{\it Modification and Calibration of Capacity Tables of Tilted Underground Oil Tanks}". (in Chinese) The 19th Contemporary Undergraduate Mathematical Contest in Modeling (CUMCM 2010), Nov. 2010.
+%
+    %\section{\sc Papers under submission}
+%
+    %One full paper has been submitted to the 10th International Conference on Mobile Systems, Applications and Services (MobiSys 2012). {\bf (Available on request)}
+    %Aveek Purohit, Zheng Sun, Shijia Pan, \underline{Kaifei Chen}, and Pei Zhang. ``SugarTrail : Mapless Navigation in Dynamic Indoor Environments with Resource-limited Mobile Devices". The 10th ACM Conference on Embedded Networked Sensor Systems (SenSys 2012), Jun. 2012.
+%
+    %\section{\sc Papers in preparation}
+%
+    %One full paper is being prepared for the 10th ACM Conference on Embedded Networked Sensor Systems (SenSys 2012).
+%
+    \section{\sc Academic Experience}
 
-    \section{\sc Experience}
-
-      {\bf University of California at Berkeley}, Berkeley, CA
+      {\bf University of California, Berkeley}, Berkeley, CA
 
       \vspace{-.3cm}
       {\em Graduate Student Researcher} \hfill Aug. 2012 - Present\\
-      Supervisor: Prof. Randy H. Katz and Prof. David E. Culler\\
+      Supervisor: Prof. David E. Culler and Prof. Randy H. Katz\\
 
       \vspace*{-.1in}
       \begin{list1}
         \item[] {\bf Software Defined Buildings}\\
-       Software Defined Buildings aims to reduce energy consumption and improve service quality in buildings. The approach is to apply technologies in Information Technology to buildings, such as actuation, failure detection, monitoring, energy reduction, scheduling.
-       \vspace*{.05in}
-       \begin{list2}
-         \item I am working on building a room-level building localization system using Wi-Fi signal strengths. Automatic localization of people is important input to enable intelligence in buildings, such as occupancy driven air conditioning system.
-         \item I am also working on automatic building map learning and construction, using smartphone as a sonar and transitions of locations of building occupants.
-       \end{list2}
+%        This is a new project I participate in. It is a data center asset tracking system using RFID and wireless sensors. I am involved in developing the software for the top-of-rack radio antenna module (RAM) to collect data and events from each racks to central servers.
+%        \vspace*{.05in}
+%        \begin{list2}
+%          \item Developed the network protocols that efficiently transfer large amounts of data from RFID readers to back-end servers over low-power ZigBee backbones.
+%        \end{list2}
       \end{list1}
-
 
       {\bf Wicresoft Co., Ltd.}, Beijing, China
 
       \vspace{-.3cm}
       {\em Software Developer Intern} \hfill Oct. 2011 - Jun. 2012\\
-      Supervisor: Dr. Chieh-Jan Mike Liang\\
+      Supervisor: Dr. Chieh-Jan Mike Liang and Dr. Xiaofan Jiang\\
 
       \vspace*{-.1in}
       \begin{list1}
         \item[] {\bf Large-scale RFID-based Asset-tracking System}\\
-        Wicresoft is a vendor company, and I was working in it on this project sponsored by Microsoft. This project is a wireless networked datacenter asset tracking system using RFID. I am responsible in developing the software of the top-of-rack radio antenna module (RAM) to build ad-hoc tree-structured multi-hop wireless network to aggregate real time asset data generated from datacenter server racks.
+        This is a new project I participate in. It is a data center asset tracking system using RFID and wireless sensors. I am involved in developing the software for the top-of-rack radio antenna module (RAM) to collect data and events from each racks to central servers.
         \vspace*{.05in}
         \begin{list2}
           \item Developed the network protocols that efficiently transfer large amounts of data from RFID readers to back-end servers over low-power ZigBee backbones.
@@ -173,27 +185,25 @@
         \end{list2}
       \end{list1}
 
-
       {\bf Microsoft Research Asia}, Beijing, China
 
       \vspace{-.3cm}
-      {\em Stars of Tomorrow Intern} in Mobile and Sensing Systems group \hfill Apr. 2011 - Sept. 2011\\
-      Mentor: Dr. Chieh-Jan Mike Liang and Dr. Xiaofan Jiang\\
+      {\em Full-time Research Intern} in Mobile and Sensing Systems group \hfill Apr. 2011 - Sept. 2011\\
+      Mentor: Dr. Chieh-Jan Mike Liang\\
 
       \vspace*{-.1in}
       \begin{list1}
         \item[] {\bf LiveSynergy}\\
-        LiveSynergy is a novel magnetic-based proximity sensing and human-environment interacting system. It consists of three parts: LivePulses (devices to establish virtual zones using magnetic induction), LiveLinks (devices to discover and interact with LivePulses), interoperability platform (wireless links and IPv6-based interfaces that allow rich human-environment interactions).
+        LiveSynergy is a novel magnetic-based proximity sensing and human-environment interacting system. It consists of three parts: LivePulses (devices to give virtual zones using magnetic induction), LiveLinks (devices to discover and interact with LivePulses), interoperability platform (wireless links and IPv6-based interfaces that allow rich human-environment interactions).
         \vspace*{.05in}
         \begin{list2}
-          \item Developed a layered magnetic data transmission system between LivePulses and LiveLinks in TinyOS, from hardware driver to applications.
-          \item Developed the interoperability platform in TinyOS on both LivePulses and LiveLinks and in Python on server, using IEEE 802.15.4c radios, single-hop network topologies, and IPv6.
+          \item Developed a magnetic data transmission system between LivePulses and LiveLinks in TinyOS, from hardware driver to high-level API and applications.
+          \item Developed the  interoperability platform in TinyOS on both LivePulses and LiveLinks and in Python on server, using 802.15.4c radios, single-hop network topologies, and IPv6.
           \item Improved the interoperability platform with regard to robustness and efficiency, involving aspects of duty cycle, packets caching, and CSMA.
-          \item Conducted several measurements of the performance of LiveSynergy in experiments and real world deployments.
-          \item Presented and demonstrated LiveSynergy, including MSRA Open House for UbiComp 2011, and MSRA 2011 Technical Advisory Board Review.
+          \item Conducted several experiments to measure the performance of LiveSynergy and a real world deployment.
+          \item Presented several demos for LiveSynergy, including MSRA Open House for UbiComp 2011 and MSRA 2011 Technical Advisory Board Review.
         \end{list2}
       \end{list1}
-
 
       {\bf Carnegie Mellon University}, {\bf Silicon Valley Campus}, Mountain View, CA
 
@@ -203,10 +213,10 @@
       \vspace*{-.1in}
       \begin{list1}
         \item[] {\bf PANDAA}\\
-        PANDAA (Physical Arrangement Detection of Networked Devices through Ambient-Sound Awareness) is a novel low-cost acoustic indoor localization system. It needs no pre-deployed infrastructure, is readily applicable for off-the-shelf mobile devices, processes fully automatic detection and achieves high accuracy.
+        PANDAA (Physical Arrangement Detection of Networked Devices through Ambient-Sound Awareness) is a novel low-cost acoustic indoor localization system. It needs no pre-deployed infrastructure, is readily applicable for off-the-shelf  mobile devices, processes fully automatic detection and achieves high accuracy.
         \vspace*{.05in}
         \begin{list2}
-          \item Designed and developed an algorithm to iteratively estimate distances between all pairs in a microphone network purely using Time Difference of Arrival (TDoA) from ambient sound sources to microphones.
+          \item Designed and developed an algorithm to iteratively estimate distances between all pairs in a microphone network purely using Time Difference of Arrival from ambient sound sources to microphones.
           \item Designed and developed a greedy algorithm to compute the relative microphone locations, making the most use of the information by giving more priorities to more precise pair distance estimations.
           %\item Implemented some experiments in a meeting room to verify and optimize the algorithms.
           \item Designed and implemented a metric to evaluate the system state when it is running.
@@ -219,12 +229,12 @@
         SensorFly is a novel low-cost controlled-mobile aerial sensor networking platform. It is light and small helicopter robot integrated with flight control, information acquisition and communication systems. A swarm of them can set up a wireless distributed network dynamically and execute tasks in cooperation.% It can be applied to searching survivors in emergencies like fire or earthquake or detecting unknown environments in exploration or combat.
         \vspace*{.05in}
         \begin{list2}
-          \item Developed the communication system of SensorFly, including data transmission and signal round-trip time measurement.
-          \item Developed the navigation system of SensorFly, which enables a swarm of the them to explore unknown environments and navigate in collaboration by constructing a virtual map consisting of several landmark clusters.% A signature is a combination of the Round-Trip Time of signal transmission between a helicopter and several beacons, which is constant for our radio.
+          \item Developed the communication system of SensorFly, including packet sending/receiving and round-trip time calculation of radio signal transmission.
+          \item Developed the navigation system of SensorFly, which enables a swarm of the helicopters to explore unknown environments and navigate in collaboration by constructing a virtual map consisting of several landmark clusters.% A signature is a combination of the Round-Trip Time of signal transmission between a helicopter and several beacons, which is constant for our radio.
           \begin{list2}
             \item[-] Designed, verified and optimized the navigation algorithm.
             \item[-] Deployed the navigation system in a supermarket, collected data at every grid point and simulated navigation based on these data in Matlab.
-            \item[-] Designed and developed a Maemo application for the navigation system in C++, using QT, sockets and multiple threads.
+            \item[-] Designed and developed a Maemo 5 (Nokia N900) application for the navigation system in C++, using QT, sockets and multiple threads.
           \end{list2}
         \end{list2}
 
@@ -246,15 +256,15 @@
 %        \item Washing machine controller in VHDL, which can create signals controlling motor and monitor.
 %      \end{list2}
 
-    % \section{\sc Skills}
-    %   C, C++, Java, C\#, Matlab, Python, nesC, VHDL, Verilog, assembler (X86, MIPS), SQL, PHP, HTML, QT, Android, twisted, Latex, Eclipse, Linux, TinyOS.
+    \section{\sc Skills}
+      C, C++, Java, C\#, Matlab, Python, nesC, VHDL, Verilog, assembler (X86, MIPS), SQL, PHP, HTML, QT, Latex, Eclipse, Linux, TinyOS.
+
+    \section{\sc References}
+      Available on request.
 
   \end{resume}
 
 \end{document}
-
-
-
 %
 %
 %\documentclass[margin,line]{res}
