--- a/CV/CV_KaifeiChen.tex
+++ b/CV/CV_KaifeiChen.tex
@@ -147,12 +147,13 @@
       \vspace*{-.1in}
       \begin{list1}
         \item[] {\bf Software Defined Buildings}\\
-       Software Defined Buildings aims to reduce energy consumption and improve service quality in buildings. The approach is to apply technologies in Information Technology to buildings, such as actuation, failure detection, monitoring, energy reduction, scheduling.
-       \vspace*{.05in}
-       \begin{list2}
-         \item I am working on building a room-level building localization system using Wi-Fi signal strengths. Automatic localization of people is important input to enable intelligence in buildings, such as occupancy driven air conditioning system.
-         \item I am also working on automatic building map learning and construction, using smartphone as a sonar and transitions of locations of building occupants.
-       \end{list2}
+        Software Defined Buildings (SDB) aims to renovate building management systems to deliver better comfortableness, capability, and efficiency in commercial buildings.
+        \vspace*{.05in}
+        \begin{list2}
+          \item Developing indoor room localization service for SDB. It combines Wi-Fi signal strengths and environment acoustic features. 
+          % Buildings are physically partitioned to rooms. And the applications and functionality of buildings that require location, such as lighting and HVAC systems, are highly related to rooms. Both of the environment and requirements 
+          \item Developing automatic building mapping algorithms, combing acoustic echoes and inertial motion sensors.
+        \end{list2}
       \end{list1}
 
 
@@ -164,12 +165,12 @@
 
       \vspace*{-.1in}
       \begin{list1}
-        \item[] {\bf Large-scale RFID-based Asset-tracking System}\\
-        Wicresoft is a vendor company, and I was working in it on this project sponsored by Microsoft. This project is a wireless networked datacenter asset tracking system using RFID. I am responsible in developing the software of the top-of-rack radio antenna module (RAM) to build ad-hoc tree-structured multi-hop wireless network to aggregate real time asset data generated from datacenter server racks.
+        \item[] {\bf MeshID}\\
+        MeshID is a wireless networked datacenter asset tracking system using RFID. I am responsible in developing the software of the top-of-rack radio antenna module (RAM) to build ad-hoc tree-structured multi-hop wireless network to aggregate real time asset data generated from datacenter server racks.
         \vspace*{.05in}
         \begin{list2}
           \item Developed the network protocols that efficiently transfer large amounts of data from RFID readers to back-end servers over low-power ZigBee backbones.
-          \item Developed driver of ZigBee radio AT86RF231 in C
+          \item Developed driver of ZigBee radio AT86RF231 in C.
         \end{list2}
       \end{list1}
 
