--- a/CV/CV_KaifeiChen.tex
+++ b/CV/CV_KaifeiChen.tex
@@ -136,6 +136,16 @@
       Zheng Sun, Aveek Purohit, \underline{Kaifei Chen}, Shijia Pan, Trevor Perring, and Pei Zhang. ``{\it PANDAA: Physical Arrangement Detection of Networked Devices through Ambient-Sound Awareness}". In Proceedings of the 13th ACM International Conference on Ubiquitous Computing, pages 425-434, Sept. 2011. Beijing, China. (Acceptance Rate: 16.6\%) {\bf (Affiliated demo wins the Best Demo Award)}
 
 
+    \section{\sc Teaching}
+
+      Excellent Undergraduate Thesis Award at University of Science and Technology of China \hfill 2012\\
+      {\it in top 5\% among all undergraduate students}
+
+      \vspace*{-2.5mm}
+      Excellent Intern Award at Microsoft Research Asia \hfill 2011\\
+      {\it in top 30\% among all Microsoft Research Asia interns}
+
+
     \section{\sc Experience}
 
       {\bf University of California at Berkeley}, Berkeley, CA
@@ -147,12 +157,13 @@
       \vspace*{-.1in}
       \begin{list1}
         \item[] {\bf Software Defined Buildings}\\
-        Software Defined Buildings (SDB) aims to renovate building management systems to deliver better comfortableness, capability, and efficiency in commercial buildings.
+        Software Defined Buildings (SDB) aims to renovate building management systems to deliver better comfortableness, capability, and efficiency in commercial buildings with technologies in computer science.
         \vspace*{.05in}
         \begin{list2}
-          \item Developing indoor room localization service for SDB. It combines Wi-Fi signal strengths and environment acoustic features. 
+          \item Developing indoor room localization service that combines Wi-Fi signal strengths and environment acoustic features. It is useful for applications like occupancy-driven energy saving and interaction with buildings.
           % Buildings are physically partitioned to rooms. And the applications and functionality of buildings that require location, such as lighting and HVAC systems, are highly related to rooms. Both of the environment and requirements 
-          \item Developing automatic building mapping algorithms, combing acoustic echoes and inertial motion sensors.
+          \item Developing a new publish-subscribe network protocol for Internet of Things that enforces authorization and authentication over web of trust model.
+          \item Worked on a new packet scheduling algorithm to reduce average flow completion time in data centers.
         \end{list2}
       \end{list1}
 
